# versa

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
benches/: Cargo.toml
benches/benches/: aggregate_groth16.rs  aggregate_rsa.rs  compute_witnesses_rsa.rs  update_epoch_0_mt.rs  update_epoch_0_rsa.rs  update_merkle_tree.rs  update_witness_rsa.rs  verify_merkle_paths.rs  verify_witnesses_rsa.rs
bulletin_board/: Cargo.toml
bulletin_board/benches/: gas_costs.rs
bulletin_board/contracts/: hashchain_board.sol  index_board.sol
crypto_primitives/: Cargo.toml
crypto_primitives/src/: lib.rs
crypto_primitives/src/hash/: constraints.rs  hash_from_digest.rs  mod.rs
crypto_primitives/src/hash/pedersen/: constraints.rs  mod.rs
crypto_primitives/src/hash/poseidon/: constraints.rs  mod.rs
crypto_primitives/src/poseidon/: constraints.rs  generate_mds.sage  mod.rs
crypto_primitives/src/sparse_merkle_tree/: constraints.rs  mod.rs
crypto_primitives/src/sparse_merkle_tree/store/: mod.rs
crypto_primitives/src/sparse_merkle_tree/store/mem_store/: mod.rs
crypto_primitives/src/sparse_merkle_tree/store/redis_store/: mod.rs  redis_utils.rs  utils.rs
ethereum_test_utils/: Cargo.toml
ethereum_test_utils/contracts/: simple_storage.sol  simple_storage_config.json
ethereum_test_utils/src/: contract.rs  lib.rs
full_history_avd/: Cargo.toml
full_history_avd/src/: lib.rs
full_history_avd/src/aggregation/: constraints.rs  groth16_aggregation.rs  mod.rs
full_history_avd/src/history_tree/: constraints.rs  mod.rs
full_history_avd/src/history_tree/store/: mod.rs
full_history_avd/src/history_tree/store/mem_store/: mod.rs
full_history_avd/src/history_tree/store/redis_store/: mod.rs
full_history_avd/src/recursion/: constraints.rs  mod.rs
full_history_avd/src/recursion/store/: mod.rs
full_history_avd/src/recursion/store/mem_store/: mod.rs
full_history_avd/src/recursion/store/redis_store/: mod.rs
full_history_avd/src/rsa_algebraic/: mod.rs
full_history_avd/src/rsa_algebraic/store/: mod.rs
full_history_avd/src/rsa_algebraic/store/mem_store/: mod.rs
full_history_avd/tests/: rsa_groth16_test.rs
rsa/: Cargo.toml
rsa/src/: lib.rs  wesolowski.rs
rsa/src/bignat/: constraints.rs  mod.rs
rsa/src/hash/: constraints.rs  mod.rs
rsa/src/hash/hash_to_integer/: constraints.rs  mod.rs
rsa/src/hash/hash_to_prime/: constraints.rs  mod.rs
rsa/src/hash_to_prime/: mod.rs
rsa/src/hog/: constraints.rs  mod.rs
rsa/src/kvac/: mod.rs
rsa/src/kvac/store/: mod.rs
rsa/src/kvac/store/mem_store/: mod.rs
rsa/src/poker/: constraints.rs  mod.rs
server/: cargo.toml
server/src/: main.rs
single_step_avd/: Cargo.toml
single_step_avd/src/: constraints.rs  lib.rs
single_step_avd/src/merkle_tree_avd/: constraints.rs  mod.rs
single_step_avd/src/merkle_tree_avd/store/: mod.rs
single_step_avd/src/merkle_tree_avd/store/mem_store/: mod.rs
single_step_avd/src/merkle_tree_avd/store/redis_store/: mod.rs
single_step_avd/src/rsa_avd/: constraints.rs  mod.rs
single_step_avd/src/rsa_avd/store/: mod.rs
single_step_avd/src/rsa_avd/store/mem_store/: mod.rs
