[package]
name = "benches"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ark-ff = { version = "0.2", default-features = false, features = ["parallel"] }
ark-ec = { version = "0.2", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.2", default-features = false }
ark-r1cs-std = { version = "0.2", default-features = false }
ark-crypto-primitives = { version = "0.2", default-features = false, features = ["r1cs"] }
ark-groth16 = { version = "0.2", default-features = false, features = ["r1cs", "parallel"] }
ark-ip-proofs = { git = "https://github.com/arkworks-rs/ripp" }
ark-ed-on-bls12-381 = { version = "0.2", default-features = false, features = ["r1cs"] }
ark-bls12-381 = { version = "0.2", default-features = false, features = ["curve"] }
ark-ed-on-mnt4-298 = { version = "0.2", default-features = false, features = ["r1cs"] }
ark-mnt4-298 = { version = "0.2", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { version = "0.2", default-features = false, features = ["r1cs"] }

crypto_primitives = { path = "../crypto_primitives" }
rsa = { path = "../rsa" }
single_step_avd = { path = "../single_step_avd" }
full_history_avd = { path = "../full_history_avd" }

csv = { version = "1.1.3" }
rand = { version = "0.7" }
digest = { version = "0.9" }
blake3 = { version = "0.3" }
rayon = { version = "1" }
num_cpus = { version = "1.13.0" }

[features]
local = []


[[bench]]
name = "update_epoch_0_rsa"
path = "benches/update_epoch_0_rsa.rs"
harness = false

[[bench]]
name = "aggregate_groth16"
path = "benches/aggregate_groth16.rs"
harness = false

