[package]
name = "bulletin_board"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]

[[bench]]
name = "gas_costs"
path = "benches/gas_costs.rs"
harness = false
