[package]
name = "bulletin_board"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ethereum_test_utils = { path = "../ethereum_test_utils" }

ethabi = "16.0.0"
primitive-types = { version = "0.10", features = ["rlp"] }
rand = { version = "0.7" }
csv = { version = "1.1" }

[[bench]]
name = "gas_costs"
path = "benches/gas_costs.rs"
harness = false
