[package]
name = "crypto_primitives"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zexe_cp = {git = "https://github.com/nirvantyagi/zexe/", package = "crypto-primitives", branch = "int-condselect" }
#algebra = {git = "https://github.com/nirvantyagi/zexe/", package = "algebra", features = [ "ed_on_bls12_381" ], branch = "int-condselect" }
#r1cs_core = {git = "https://github.com/nirvantyagi/zexe/", package = "r1cs-core", branch = "int-condselect" }
#r1cs_std = {git = "https://github.com/nirvantyagi/zexe/", package = "r1cs-std", features = [ "ed_on_bls12_381" ], branch = "int-condselect" }

ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git", branch = "main", default-features = false, features = ["r1cs"] }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }

rand = { version = "0.7" }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["r1cs"] }

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std" ]
