[package]
name = "crypto_primitives"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.2", default-features = false }
ark-ec = { version = "0.2", default-features = false }
ark-relations = { version = "0.2", default-features = false }
ark-crypto-primitives = { version = "0.2", default-features = false, features = ["r1cs"] }
ark-r1cs-std = { version = "0.2", default-features = false }
ark-std = { version = "0.2", default-features = false }

uuid = { version = "0.8", features = ["serde", "v4"] }
redis = "0.21.5"
rand = { version = "0.7" }
tracing = { version = "0.1", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-381 = { version = "0.2", default-features = false, features = ["r1cs"] }

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std" ]
