[package]
name = "full_history_avd"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zexe_cp = {git = "https://github.com/nirvantyagi/zexe/", package = "crypto-primitives", features = [ "groth16" ], branch = "int-condselect" }
#algebra = {git = "https://github.com/nirvantyagi/zexe/", package = "algebra", features = [ "ed_on_bls12_381", "bls12_381", "mnt4_298", "mnt6_298", "ed_on_mnt4_298" ], branch = "int-condselect" }
#ff_fft = {git = "https://github.com/nirvantyagi/zexe/", package = "ff-fft", branch = "int-condselect" }
#groth16 = {git = "https://github.com/nirvantyagi/zexe/", package = "groth16", branch = "int-condselect" }
#r1cs_core = {git = "https://github.com/nirvantyagi/zexe/", package = "r1cs-core", branch = "int-condselect" }
#r1cs_std = {git = "https://github.com/nirvantyagi/zexe/", package = "r1cs-std", features = [ "ed_on_bls12_381", "mnt4_298", "mnt6_298", "ed_on_mnt4_298" ], branch = "int-condselect" }
#bench_utils = {git = "https://github.com/nirvantyagi/zexe/", package = "bench-utils", branch = "int-condselect" }
#ip_proofs = {git = "https://github.com/nirvantyagi/ripp/", package = "ip_proofs", branch = "forked-zexe-dependency" }
#dh_commitments = {git = "https://github.com/nirvantyagi/ripp/", package = "dh_commitments", branch = "forked-zexe-dependency" }
#inner_products = {git = "https://github.com/nirvantyagi/ripp/", package = "inner_products", branch = "forked-zexe-dependency" }

ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-poly = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-relations = { git = "https://github.com/arkworks-rs/snark", default-features = false }
ark-r1cs-std = { git = "https://github.com/arkworks-rs/r1cs-std", default-features = false }
ark-std = { git = "https://github.com/arkworks-rs/utils", default-features = false }
ark-crypto-primitives = { git = "https://github.com/arkworks-rs/crypto-primitives.git", branch = "main", default-features = false, features = ["r1cs"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", default-features = false, features = ["r1cs"] }
bench-utils = { git = "https://github.com/arkworks-rs/utils", default-features = false }

ark-ip-proofs = { git = "https://github.com/arkworks-rs/ripp", default-features = false }
ark-dh-commitments = { git = "https://github.com/arkworks-rs/ripp", default-features = false }
ark-inner-products = { git = "https://github.com/arkworks-rs/ripp", default-features = false }

rand = { version = "0.7" }
digest = { version = "0.9" }
num-traits = { version = "0.2" }
tracing = { version = "0.1", default-features = false }

crypto_primitives = { path = "../crypto_primitives" }
rsa = { path = "../rsa" }
single_step_avd = { path = "../single_step_avd" }

[dev-dependencies]
blake2 = { version = "0.9" }
blake3 = { version = "0.3" }
tracing-subscriber = { version = "0.2" }
ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["r1cs"] }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["curve"] }
ark-ed-on-mnt4-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["r1cs"] }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = ["r1cs"] }

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std", "ark-poly/std" ]
print-trace = [ "bench-utils/print-trace" ]
