[package]
name = "full_history_avd"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.2", default-features = false }
ark-ec = { version = "0.2", default-features = false }
ark-poly = { version = "0.2", default-features = false }
ark-relations = { version = "0.2", default-features = false }
ark-r1cs-std = { version = "0.2", default-features = false }
ark-std = { version = "0.2", default-features = false }
ark-crypto-primitives = { version = "0.2", default-features = false, features = ["r1cs"] }
ark-groth16 = { version = "0.2", default-features = false, features = ["r1cs"] }

ark-ip-proofs = { git = "https://github.com/arkworks-rs/ripp", default-features = false, rev = "d152aecd46b999e7a592e143cd2e4dd87c0d2787" }
ark-dh-commitments = { git = "https://github.com/arkworks-rs/ripp", default-features = false, rev = "d152aecd46b999e7a592e143cd2e4dd87c0d2787" }
ark-inner-products = { git = "https://github.com/arkworks-rs/ripp", default-features = false, rev = "d152aecd46b999e7a592e143cd2e4dd87c0d2787" }

rand = { version = "0.7" }
digest = { version = "0.9" }
num-traits = { version = "0.2" }
tracing = { version = "0.1", default-features = false }
rayon = { version = "1", optional = true }

crypto_primitives = { path = "../crypto_primitives" }
rsa = { path = "../rsa" }
single_step_avd = { path = "../single_step_avd" }

[dev-dependencies]
blake2 = { version = "0.9" }
blake3 = { version = "0.3" }
tracing-subscriber = { version = "0.2" }
ark-ed-on-bls12-381 = { version = "0.2", default-features = false, features = ["r1cs"] }
ark-bls12-381 = { version = "0.2", default-features = false, features = ["curve"] }
ark-ed-on-mnt4-298 = { version = "0.2", default-features = false, features = ["r1cs"] }
ark-mnt4-298 = { version = "0.2", default-features = false, features = ["r1cs", "curve"] }
ark-mnt6-298 = { version = "0.2", default-features = false, features = ["r1cs"] }

[features]
default = ["std", "parallel"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std", "ark-poly/std", "ark-groth16/std" ]
parallel = [
    "rayon",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-std/parallel",
    "ark-groth16/parallel",
]
print-trace = [ "ark-std/print-trace" ]
