[package]
name = "rsa"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# Ported from https://github.com/alex-ozdemir/bellman-bignat
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.2", default-features = false }
ark-ec = { version = "0.2", default-features = false }
ark-relations = { version = "0.2", default-features = false }
ark-r1cs-std = { version = "0.2", default-features = false }
ark-std = { version = "0.2", default-features = false }

rug = { version = "1.10", default-features = false, features = ["integer", "serde", "rand"] }
rand = { version = "0.7" }
num-traits = { version = "0.2" }
digest = { version = "0.9" }
tracing = { version = "0.1", default-features = false }

crypto_primitives = { path = "../crypto_primitives" }

[dev-dependencies]
blake3 = { version = "0.3" }
tracing-subscriber = { version = "0.2" }
ark-ed-on-bls12-381 = { version = "0.2", default-features = false, features = ["r1cs"] }

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std" ]
print-trace = [ "ark-std/print-trace" ]
