[package]
name = "single_step_avd"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zexe_cp = {git = "https://github.com/nirvantyagi/zexe/", package = "crypto-primitives"}
algebra = {git = "https://github.com/nirvantyagi/zexe/", package = "algebra", features = [ "ed_on_bls12_381" ] }
r1cs_core = {git = "https://github.com/nirvantyagi/zexe/", package = "r1cs-core" }
r1cs_std = {git = "https://github.com/nirvantyagi/zexe/", package = "r1cs-std", features = [ "ed_on_bls12_381" ] }
rand = { version = "0.7" }
sha3 = { version = "0.9" }

crypto_primitives = { path = "../crypto_primitives" }