[package]
name = "single_step_avd"
version = "0.1.0"
authors = ["Nirvan Tyagi <nirvan.tyagi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.2", default-features = false }
ark-ec = { version = "0.2", default-features = false }
ark-relations = { version = "0.2", default-features = false }
ark-r1cs-std = { version = "0.2", default-features = false }
ark-std = { version = "0.2", default-features = false }

rand = { version = "0.7" }
sha3 = { version = "0.9" }
tracing = { version = "0.1", default-features = false }
serde = { version = "1.0.117" }
serde_json = "1.0"

crypto_primitives = { path = "../crypto_primitives" }
rsa = { path = "../rsa" }

[dev-dependencies]
ark-crypto-primitives = { version = "0.2", default-features = false, features = ["r1cs"] }
ark-ed-on-bls12-381 = { version = "0.2", default-features = false, features = ["r1cs"] }
tracing-subscriber = { version = "0.2" }
blake3 = { version = "0.3" }

[features]
default = ["std"]
std = [ "ark-ff/std", "ark-ec/std", "ark-std/std", "ark-relations/std" ]
